arr/overseerr/overseerr-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: arr-stack
  name: overseerr-route
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure 
  routes:
    - kind: Rule
      match: Host(`overseerr.local.wololoaeyoyo.com`)
      services:
        - name: overseerr 
          port: 5055
  tls:
    secretName: local-wololoaeyoyo-com-tls
